gradesa/src/app/globals.css
:root {
  font-family:
    "Inter",
    system-ui,
    -apple-system,
    sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light;
  background: var(--site-bg);
  color: var(--fg1);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Colors for light mode */
  /* background colors (page, cards, etc.) */
  --bg1: hsl(213, 20%, 94%);
  --bg2: hsl(213, 20%, 96%);
  --bg3: hsl(213, 20%, 98%);
  --bg4: hsl(213, 20%, 99%);

  --linear-gradient: linear-gradient(120deg,
      var(--primary1) 12%,
      var(--primary3) 47%,
      var(--primary4) 75%);

  --site-bg: var(--bg1);

  /* foreground colors (text, icons, etc.) */
  --fg1: hsl(240, 40%, 5%);
  --fg2: hsl(240, 40%, 11%);
  --fg3: hsl(240, 40%, 15%);
  --fg4: hsl(0, 0%, 64%);

  --tertiary1: hsl(351, 90%, 90%);
  --tertiary2: hsl(351, 90%, 80%);
  --tertiary3: hsl(351, 90%, 70%);
  --tertiary4: hsl(351, 90%, 60%);
  --tertiary5: hsl(351, 90%, 50%);
  --tertiary6: hsl(351, 90%, 40%);
  --tertiary7: hsl(351, 90%, 30%);
  --tertiary8: hsl(351, 90%, 20%);
  --tertiary9: hsl(351, 90%, 10%);
  --tertiary10: hsl(120, 60%, 50%);

  --secondary1: hsl(249, 90%, 90%);
  --secondary2: hsl(249, 90%, 80%);
  --secondary3: hsl(249, 90%, 70%);
  --secondary4: hsl(249, 90%, 60%);
  --secondary5: hsl(249, 90%, 50%);
  --secondary6: hsl(249, 90%, 40%);
  --secondary7: hsl(249, 90%, 30%);
  --secondary8: hsl(249, 90%, 20%);
  --secondary9: hsl(249, 90%, 10%);

  --primary1: hsl(213, 90%, 85%);
  --primary2: hsl(213, 90%, 80%);
  --primary3: hsl(213, 90%, 75%);
  --primary4: hsl(213, 90%, 70%);

  --green1: hsl(120, 60%, 90%);
  --green2: hsl(120, 60%, 80%);
  --green3: hsl(120, 60%, 70%);
  --green4: hsl(120, 60%, 60%);
  --green5: hsl(120, 60%, 50%);
  --green6: hsl(120, 60%, 40%);
  --green7: hsl(120, 60%, 30%);
  --green8: hsl(120, 60%, 20%);
  --green9: hsl(120, 60%, 10%);

  --blue1: hsl(240, 80%, 46%);

  /* indicator colors */
  --green: hsl(120, 40%, 50%);
  --blue: hsl(240, 66%, 53%);
  --red: hsl(0, 69%, 56%);
  --yellow: hsl(50, 86%, 74%);
  --yellow-border: hsl(43, 65%, 51%);
  --purple: hsl(270, 86%, 47%);

  --masculine: hsl(240, 80%, 77%);
  --feminine: hsl(359, 73%, 71%);
  --neutral: hsl(112, 49%, 63%);

  /* font sizes */
  --font-xs: 8px;
  --font-sm: 12px;
  --font-md: 16px;
  --font-lg: 20px;
  --font-xl: 26px;
  --font-2xl: 32px;

  /* padding/margin sizes */
  --u-xs: 2px;
  --u-sm: 4px;
  --u-md: 8px;
  --u-lg: 14px;
  --u-xl: 22px;
  --u-2xl: 30px;
  --u-3xl: 42px;

  /* border radius sizes */
  --radius-2xs: 1px;
  --radius-xs: 2px;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 10px;
  --radius-xl: 16px;
  --radius-2xl: 24px;

  /* z-index */
  --z-1: 10;
  --z-2: 20;
  --z-3: 30;
  --z-4: 40;
  --z-5: 50;
  --z-6: 60;
  --z-7: 70;
  --z-8: 80;
  --z-9: 90;
  --z-10: 100;
  --z-max: 9999;
}

@media (prefers-color-scheme: dark) {
  :root {
    /* Inverted background colors for dark mode */
    --bg1: hsl(207, 42%, 9%);
    --bg2: hsl(208, 30%, 11%);
    --bg3: hsl(216, 49%, 20%);
    --bg4: hsl(212, 84%, 17%);

    --linear-gradient: linear-gradient(120deg,
        var(--primary3) 12%,
        var(--primary4) 47%,
        var(--primary2) 75%);

    --site-bg: var(--bg2);

    --fg1: hsl(213, 20%, 98%);
    --fg2: hsl(213, 20%, 90%);
    --fg3: hsl(213, 20%, 82%);
    --fg4: hsl(213, 20%, 74%);

    --tertiary1: hsl(351, 40%, 30%);
    --tertiary2: hsl(351, 40%, 40%);
    --tertiary3: hsl(351, 40%, 50%);
    --tertiary4: hsl(351, 40%, 60%);
    --tertiary5: hsl(351, 40%, 70%);
    --tertiary6: hsl(351, 40%, 80%);
    --tertiary7: hsl(351, 40%, 85%);
    --tertiary8: hsl(351, 40%, 90%);
    --tertiary9: hsl(351, 40%, 95%);
    --tertiary10: hsl(113, 100%, 25%);

    --secondary1: hsl(178, 60%, 30%);
    --secondary2: hsl(178, 60%, 40%);
    --secondary3: hsl(178, 80%, 52%);
    --secondary4: hsl(178, 60%, 60%);
    --secondary5: hsl(178, 60%, 70%);
    --secondary6: hsl(178, 60%, 80%);
    --secondary7: hsl(178, 60%, 85%);
    --secondary8: hsl(178, 60%, 90%);
    --secondary9: hsl(178, 60%, 95%);

    --primary1: #1e2a78;
    --primary2: #2f4fb0;
    --primary3: #5078d0;
    --primary4: #7f9cc7;

    --green1: hsl(120, 40%, 30%);
    --green2: hsl(120, 40%, 40%);
    --green3: hsl(120, 40%, 50%);
    --green4: hsl(120, 40%, 60%);
    --green5: hsl(120, 40%, 70%);
    --green6: hsl(120, 40%, 80%);
    --green7: hsl(120, 40%, 85%);
    --green8: hsl(120, 40%, 90%);
    --green9: hsl(120, 40%, 95%);

    --blue1: hsl(224, 86%, 59%);

    /* indicator colors */
    --green: hsl(120, 40%, 50%);
    --blue: hsl(240, 66%, 53%);
    --red: hsl(0, 69%, 56%);
    --yellow: hsl(50, 86%, 74%);

    --yellow-border: hsl(43, 65%, 51%);
    --purple: hsl(270, 86%, 47%);

    --masculine: hsl(240, 80%, 22%);
    --feminine: hsl(359, 84%, 37%);
    --neutral: hsl(112, 100%, 16%);
  }
}

body {
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
  margin: 0;
  display: flex;
  flex-direction: column;
}

h1 {
  font-size: 2rem;
  margin-bottom: 1rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.nav-auth-btn {
  background-color: transparent;
  border: 2px solid var(--secondary5);
  color: var(--secondary5);
}

.nav-auth-btn:hover {
  background: var(--secondary5);
  color: var(--bg1);
}

.container {
  max-width: 1200px;
  margin: 2rem auto;
  padding: 2rem;
}

.hero {
  text-align: center;
  padding: var(--u-2xl) var(--u-3xl);
  /* background: linear-gradient(120deg, #a0aec0 12%, #90cdf4 47%, #5297ff 75%); */
  border-radius: 20px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
  margin-bottom: 3rem;
  background: var(--linear-gradient);
  display: flex;
  flex-direction: column;
  gap: var(--u-lg);
}

.hero h1 {
  font-size: 3.5rem;
  color: var(--fg1);
  margin: 0;
  font-weight: 800;
}

.hero p {
  font-size: 1.25rem;
  color: var(--fg1);
  max-width: 600px;
  margin: 0 auto;
  display: flex;
}

.hero a {
  margin-top: auto;
}

.features {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 2rem;
  padding: 2rem 0;
}

.feature-card {
  gap: var(--u-lg);
  background: var(--bg3);
  padding: 2rem;
  border-radius: 15px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
}

.feature-card h3 {
  color: var(--fg3);
  font-size: 1.5rem;
  margin: 0;
}

.feature-card>a {
  margin-top: auto;
}

.feature-card p {
  color: var(--fg3);
  line-height: 1.6;
}

ul.exercise-list {
  list-style-type: circle;
}

button.back-button {
  border: none;
  padding: 1rem 2rem;
  font-size: 1.1rem;
  border-radius: 30px;
  cursor: pointer;
  transition:
    transform 0.2s ease,
    box-shadow 0.2s ease;
  font-weight: 600;
  margin-top: 2rem;
  text-decoration: none;
  display: inline-block;
}

.cta-button:hover {
  transform: translateY(-2px);
  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
}

.search-container {
  max-width: 600px;
  margin: 0 auto;
}

.search-input {
  width: 100%;
  padding: 1rem 1.5rem;
  font-size: 1.1rem;
  border: none;
  border-radius: 30px;
  background: var(--bg2);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;
}

.search-input:focus {
  outline: none;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
}

@media (max-width: 1024px) {
  .nav-links {
    display: none;
  }

  .nav-auth {
    display: none;
  }

  .form-row {
    grid-template-columns: 1fr;
  }
}

a:link {
  color: var(--primary4);
}

a:visited {
  color: var(--primary4);
}

a:hover {
  color: var(--fg1);
}

a:active {
  color: var(--fg1);
}

h1 {
  font-size: var(--u-3xl);
  margin: 0;
}

h2 {
  font-size: 1.2em;
  font-weight: bold;
  color: var(--tertiary1);
  margin-bottom: 15px;
}

ul {
  list-style-type: circle;
}

p {
  margin: 0;
}

input {
  border: 1px solid var(--primary4);
  border-radius: var(--radius-sm);
  font-size: var(--font-md);
  background: var(--bg3);
  padding: var(--u-md) var(--u-lg);
  color: var(--fg1);

  &:focus {
    outline: none;
    border-color: var(--primary4);
  }
}

textarea {
  border: 1px solid var(--primary4);
  border-radius: var(--radius-sm);
  font-size: var(--font-md);
  background: var(--bg3);
  padding: var(--u-md) var(--u-lg);
  color: var(--fg1);

  &:focus {
    outline: none;
    border-color: var(--primary4);
  }
}

label {
  display: flex;
  flex-direction: column;
  gap: var(--u-sm);
  font-size: var(--font-sm);
}

.error {
  color: var(--red);
}

.italic {
  font-style: italic;
}

.underline {
  text-decoration: underline;
}

#tooltip-portal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: var(--z-max);
  pointer-events: none;
  overflow: hidden;
}

.error-message {
  padding: var(--u-md);
  background-color: var(--tertiary5);
  font-size: var(--font-md);
  color: var(--fg1);
  border-radius: var(--radius-sm);
  margin-bottom: var(--u-lg);
  text-align: center;
  margin-top: var(--u-lg);
}

.success-message {
  padding: var(--u-md);
  background-color: var(--tertiary10);
  font-size: var(--font-md);
  color: var(--fg9);
  border-radius: var(--radius-sm);
  margin-bottom: var(--u-lg);
  text-align: center;
  margin-top: var(--u-lg);
}

